# gojeera

./: .gitignore  .ubs-report.json  AGENTS.md  LICENSE  Makefile  README.md  gojeera.example.yaml  openapi.json  pyproject.toml  pytest.ini
docs/: configuration.md  install.md  markdown_to_adf_conversion.md  usage.md
scripts/: check_css.py  check_unused_css.py  generate_static_svg.py  test.sh
src/gojeera/: app.py  auth_profiles.py  auth_service.py  cache.py  cli.py  config.py  conftest.py  constants.py  exceptions.py  files.py  gojeera.tcss  logging_utils.py  models.py  oauth2.py  secret_store.py  themes.py  usage.md
src/gojeera/api/: api.py  client.py  utils.py
src/gojeera/api_controller/: controller.py  factories.py
src/gojeera/commands/: binding_provider.py  decision_provider.py  footer_provider.py  handler.py  panel_provider.py  render.py  search_command_provider.py  user_mention_provider.py  work_item_command_provider.py
src/gojeera/components/: clone_work_item_screen.py  comment_screen.py  confirmation_screen.py  debug_screen.py  decision_picker_screen.py  edit_work_item_info_screen.py  help_screen.py  new_attachment_screen.py  new_related_work_item_screen.py  new_work_item_screen.py  panel_picker_screen.py  parent_work_item_screen.py  quick_navigation_screen.py  quit_screen.py  save_attachment_screen.py  unified_search.py  user_mention_picker_screen.py  view_attachment_screen.py  web_link_screen.py  work_item_attachments.py  work_item_comments.py  work_item_description.py  work_item_fields.py  work_item_information.py  work_item_related_work_items.py  work_item_result.py  work_item_subtasks.py  work_item_summary.py  work_item_web_links.py  work_item_work_log_screen.py  work_log_screen.py
src/gojeera/tests/: test_app.py  test_attachments.py  test_fulltext_search.py  test_git.py  test_main_screen.py  test_models_atlas_parser.py  test_search_results.py  test_widgets.py
src/gojeera/utils/: adf_helpers.py  clipboard.py  external_editor.py  fields.py  focus.py  in_app_help.md  mappings.py  mdit_adf_decision.py  mdit_adf_panels.py  mention_helpers.py  mime.py  obfuscation.py  styling.py  urls.py  widgets_factory_utils.py  work_item_reference.py  work_item_templates.py  work_item_updates.py  yaml.py
src/gojeera/widgets/: adf_textarea.py  app_header.py  button_with_metadata.py  config_info.py  date_input.py  date_time_input.py  dynamic_modal_screen.py  extended_adf_markdown_textarea.py  extended_button.py  extended_data_table.py  extended_footer.py  extended_input.py  extended_jumper.py  extended_modal_screen.py  extended_palette.py  extended_tabbed_content.py  extended_textarea.py  filters.py  git_screen.py  gojeera_markdown.py  gojeera_markdown_viewer.py  help.py  jql.py  jql_autocomplete.py  jumper_file_picker.py  lazy_select.py  multi_select.py  numeric_input.py  screens.py  search.py  selection.py  server_info.py  spacer.py  sprint_picker.py  subtasks.py  text_input.py  time_tracking.py  url.py  user_picker.py  user_selection_input.py  (+10 more)
src/jiratui/css/: jt.tcss
src/jiratui/widgets/: screens.py
tests/: config_test_helpers.py  conftest.py  jira_api_test_utils.py  test_adf_to_markdown.py  test_api_client_auth.py  test_api_controller_auth.py  test_api_payloads.py  test_app_appearance.py  test_application_cache.py  test_auth_profiles.py  test_auth_service.py  test_cache_migrations.py  test_cli_auth.py  test_clipboard.py  test_clone_work_item.py  test_clone_work_item_screen.py  test_comment_screen.py  test_configuration_auth.py  test_confirmation_screen.py  test_create_work_item_screen.py  test_debug_screen.py  test_decision_picker_screen.py  test_edit_work_item_info_screen.py  test_extended_modal_screen.py  test_external_editor.py  test_help_screen.py  test_helpers.py  test_jira_api_changelog.py  test_jira_api_filters.py  test_jira_graphql.py  test_jql_utils.py  test_jumper.py  test_markdown_to_adf.py  test_new_attachment_screen.py  test_new_related_work_item_screen.py  test_new_subtask_screen.py  test_new_work_item_screen.py  test_oauth2.py  test_panel_picker_screen.py  test_parent_work_item_screen.py  (+29 more)
tests/__snapshots__/test_app_appearance/: TestAppAppearance.test_app_with_custom_theme.raw  TestAppAppearance.test_app_with_default_theme.raw  TestAppAppearance.test_app_with_obfuscated_personal_info.raw  TestAppAppearance.test_app_with_terminal_size_small.raw  TestAppAppearance.test_app_with_theme_dracula.raw  TestAppAppearance.test_app_with_theme_gruvbox.raw  TestAppAppearance.test_app_with_theme_monokai.raw  TestAppAppearance.test_app_with_theme_nord.raw
tests/__snapshots__/test_clone_work_item_screen/: TestCloneWorkItemScreen.test_clone_work_item_screen_initial_state.raw  TestCloneWorkItemScreen.test_clone_work_item_screen_with_empty_summary.raw  TestCloneWorkItemScreen.test_clone_work_item_screen_with_modified_summary.raw
tests/fixtures/: jira_agile_boards.json  jira_agile_sprints.json  jira_comments_empty.json  jira_configuration.json  jira_engineering_agile_boards.json  jira_engineering_agile_sprints.json  jira_engineering_createmeta_fields.json  jira_engineering_issue_types.json  jira_engineering_project_issue_types.json  jira_engineering_statuses.json  jira_engineering_transitions.json  jira_fields.json  jira_fields_search.json  jira_graphql_project_repositories.json  jira_initial_comment.json  jira_issue_types.json  jira_jql_validation_valid.json  jira_myself.json  jira_new_attachment.json  jira_new_comment.json  jira_new_worklog.json  jira_parent_candidates.json  jira_priorities.json  jira_project_example_with_issue_types.json  jira_project_issue_types.json  jira_projects.json  jira_repository_pull_requests.json  jira_search_empty.json  jira_search_with_results.json  jira_server_info.json  jira_software_project_releases.json  jira_software_project_releases_empty.json  jira_statuses.json  jira_support_createmeta_fields.json  jira_support_issue_types.json  jira_support_statuses.json  jira_support_transitions.json  jira_transitions.json  jira_transitions_empty.json  jira_users.json  (+6 more)
(+295 files in other folders)
