[project]
name = "gojeera"
version = "0.1.0"
description = "A TUI for interacting with Atlassian Jira from your terminal."
readme = "README.md"
requires-python = ">=3.10,<3.15"

authors = [
    { name = "Gaston T.", email = "pythondeveloper@outlook.com" },
    { name = "Vadim Khitrin", email = "me@vkhitrin.com" },
]
maintainers = [{ name = "Vadim Khitrin", email = "me@vkhitrin.com" }]
keywords = ["tui", "jira", "cli", "terminal", "shell", "task-management"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Textual",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "atlas-doc-parser>=1.0.1",
    "click==8.3.0",
    "defusedxml>=0.7.1",
    "gitpython>=3.1.47",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "mdit-py-plugins>=0.5.0",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings[yaml]>=2.14.0",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=4.1.0",
    "python-magic>=0.4.27",
    "textual-autocomplete>=4.0.6",
    "textual-fspicker>=1.0.0",
    "textual-jumper>=0.2.1",
    "textual-tags>=0.3.3",
    "textual[syntax]>=8.2.4",
    "xdg-base-dirs>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/vkhitrin/gojeera"
Documentation = "https://github.com/vkhitrin/gojeera/tree/main/docs"
Repository = "https://github.com/vkhitrin/gojeera"
Issues = "https://github.com/vkhitrin/gojeera/issues"

[dependency-groups]
dev = ["textual-dev>=1.8.0"]
lint = ["ruff>=0.15.12", "ty>=0.0.32", "vulture>=2.16"]
test = [
    "pytest>8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>6.2.1",
    "pytest-textual-snapshot>=1.0.0",
    "pytest-xdist>=3.8.0",
    "respx>=0.23.1",
]

[project.scripts]
gojeera = "gojeera.cli:gojeeraCLI"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.14"
strict_optional = false
ignore_missing_imports = true
show_error_context = false
exclude = ["docs", "test"]

[tool.uv.sources]
atlas-doc-parser = { git = "https://github.com/MacHu-GWU/atlas_doc_parser-project" }
textual-tags = { git = "https://github.com/Zaloog/textual-tags" }
textual-jumper = { git = "https://github.com/Zaloog/textual-jumper", rev = "main" }
textual-fspicker = { git = "https://github.com/davep/textual-fspicker" }
vulture = { git = "https://github.com/jendrikseipp/vulture" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.vulture]
paths = ["src"]
ignore_names = [
    "BINDINGS",
    "COMPONENT_CLASSES",
    "DEFAULT_CSS",
    "ENVIRONMENT",
    "FIX_VERSIONS",
    "HELP",
    "JiraBoard",
    "SPRINT",
    "STORY_POINTS",
    "TEAM",
    "VERSIONS",
    "_align_to_target",
    "_handle_account_id_ready",
    "_handle_focus_change",
    "_hit_count",
    "_is_overflowing",
    "_list_visible",
    "_on_*",
    "_overlays",
    "_parent_work_item",
    "_reactive_selected_tags",
    "_reactive_tag_values",
    "_refresh_command_list",
    "_selected_work_item_type_id",
    "_stored_title",
    "_token_to_content",
    "absolute_offset",
    "action_*",
    "action_focus_content",
    "action_focus_previous_or_tabs",
    "action_jump_to_first",
    "action_jump_to_last",
    "action_new_work_item_subtask",
    "action_show_overlay",
    "agile_client",
    "accept",
    "apply_completion",
    "auth_login",
    "auth_logout",
    "auth_status",
    "as_dict",
    "as_json",
    "auto_refresh",
    "boardId",
    "check_action",
    "clear_current",
    "clear_form",
    "clear_information",
    "cls",
    "compact",
    "completeDate",
    "content_scroll",
    "current_status_color",
    "date_metadata_widgets_container",
    "delete_jira_oauth2_client_secret",
    "discover",
    "do_GET",
    "displayed_count",
    "end",
    "endDate",
    "exchange_atlassian_authorization_code",
    "file_secret_settings",
    "format",
    "get_atlassian_accessible_resources",
    "get_candidates",
    "get_content_height",
    "get_content_width",
    "get_matches",
    "get_search_string",
    "get_jira_oauth2_client_secret",
    "goal",
    "handle_*",
    "has_pending_changes",
    "highlight_link_id",
    "is_loading",
    "jump_mode",
    "markup",
    "model_config",
    "move_down",
    "move_up",
    "on_*",
    "open_file_picker",
    "oauth2_client_id",
    "oauth2_client_secret",
    "oauth2_scopes",
    "oauth2_authorization_url",
    "oauth2_token_url",
    "oauth2_redirect_uri",
    "oauth2_refresh_token",
    "padding",
    "pagination",
    "parameters",
    "pending_page",
    "previous_hover_style",
    "progress",
    "projectKey",
    "raw",
    "relation_type",
    "render",
    "refresh_atlassian_oauth2_token",
    "require_api_base_url",
    "require_api_username",
    "require_cloud_id",
    "require_oauth2_access_token",
    "reset_last_tag",
    "result_subtitle",
    "resolve_profile",
    "search_themes",
    "selected_user",
    "set_initial_work_item_key",
    "set_jira_oauth2_client_secret",
    "set_jira_oauth2_refresh_token",
    "build_atlassian_authorization_url",
    "run_atlassian_oauth2_authorization_flow",
    "settings_customise_sources",
    "severity",
    "should_show_dropdown",
    "show_horizontal_scrollbar",
    "start",
    "startDate",
    "start_at",
    "static_fields_container",
    "sync_client",
    "template",
    "tooltip",
    "token_type",
    "expires_in",
    "unified_search_button",
    "unified_search_input",
    "unified_search_mode_selector",
    "validate_*",
    "viewport",
    "visible",
    "watch_*",
    "wait_for_atlassian_oauth2_callback",
    "log_message",
    "work_item_components_has_changed",
    "work_item_due_date_has_changed",
    "work_item_parent_has_changed",
    "work_item_search_results",
    "work_item_time_tracking",
    "work_log_items_container",
    "avatar_url",
]
